--- a/gasto/src/app/record/record.component.html
+++ b/gasto/src/app/record/record.component.html
@@ -8,16 +8,16 @@
         <h4 class="ui sub header">Amount</h4>
         <div class="ui labeled input">
           <label for="amount" class="ui label"><i class="money bill alternate outline icon"></i></label>
-          <input type="text" id="amount" spellcheck="false" data-ms-editor="true" maxlength="10">
+          <input type="text" [(ngModel)]="amount" name="amount" spellcheck="false" data-ms-editor="true" maxlength="10">
         </div>
         <h4 class="ui sub header">Comment</h4>
         <div class="ui labeled input">
           <label for="comment" class="ui label"><i class="edit icon"></i></label>
-          <input type="text" id="comment" spellcheck="false" data-ms-editor="true" maxlength="50">
+          <input type="text" [(ngModel)]="comment" name="comment" spellcheck="false" data-ms-editor="true" maxlength="50">
         </div>
       </div>
       <div class="extra content">
-        <button class="ui primary button">Submit</button>
+        <button (click)="submit()" class="ui primary button">Submit</button>
         <button type="reset" class="ui button">Clear</button>
       </div>
     </div>
