--- a/gasto/src/app/statement/statement.component.html
+++ b/gasto/src/app/statement/statement.component.html
@@ -4,7 +4,7 @@
         <div class="header">Statement</div>
       </div>
       <div class="content">
-        Content
+        <h4>Data Filter: </h4>
       </div>
     </div>
   </div>
