insert record and view statement

--- a/gasto/src/styles.css
+++ b/gasto/src/styles.css
@@ -16,3 +16,5 @@
 .padding-2-percentage {
   padding: 2%;
 }
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
