--- a/gasto/src/app/statement/statement.component.html
+++ b/gasto/src/app/statement/statement.component.html
@@ -1,11 +1,58 @@
 <div class="ui container padding-2-percentage">
-    <div class="ui card centered fluid">
-      <div class="content">
-        <div class="header">Statement</div>
-      </div>
-      <div class="content">
-        <h4>Data Filter: </h4>
-      </div>
+  <div class="ui card centered fluid">
+    <div class="content">
+      <div class="header">Statement</div>
+    </div>
+    <div class="content">
+      <form>
+        <h4 class="ui header">To Date: </h4>
+        <div class="ui labeled input">
+          <input [(ngModel)]="toDate" type="date" name="to">
+        </div>
+        <h4 class="ui header">From Date: </h4>
+        <div class="ui labeled input">
+          <input [(ngModel)]="fromDate" type="date" name="to">
+        </div>
+        <p class="button-padding">
+          <button (click)="submit()" class="ui primary button">Submit</button>
+          <button type="reset" class="ui button">Clear</button>
+        </p>
+      </form>
+    </div>
+    <div class="extra content">
+      <table class="ui sortable celled table">
+        <thead>
+          <tr>
+            <th class="sorted descending">DateTime</th>
+            <th>Amount</th>
+            <th>Comment</th>
+            <th>Location</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr *ngFor="let entry of recordList[currentPage]">
+            <td>{{ formatDateTime(entry.getDate()) }}</td>
+            <td>{{ entry.getAmount() }}</td>
+            <td>{{ entry.getComment() }}</td>
+            <td>({{ entry.getLatitude() }}, {{ entry.getLongitude() }})</td>
+          </tr>
+        </tbody>
+        <tfoot>
+          <tr>
+            <th colspan="5">
+              <div class="ui right floated pagination menu">
+                <a class="icon item" (click)="prev()">
+                  <i class="left chevron icon"></i>
+                </a>
+                <a class="item" *ngFor="let page of pagination">{{ page }}</a>
+                <a class="icon item" (click)="next()">
+                  <i class="right chevron icon"></i>
+                </a>
+              </div>
+            </th>
+          </tr>
+        </tfoot>
+      </table>
     </div>
   </div>
-  
+</div>
