--- a/gasto/src/app/app.component.html
+++ b/gasto/src/app/app.component.html
@@ -3,3 +3,4 @@
 <app-record *ngIf="isRecordActive"></app-record>
 <app-detail *ngIf="isDetailActive"></app-detail>
 <app-statement *ngIf="isStatementActive"></app-statement>
+<app-category *ngIf="isCategoryActive"></app-category>
