--- a/gasto/src/app/navigation/navigation.component.html
+++ b/gasto/src/app/navigation/navigation.component.html
@@ -8,9 +8,10 @@
   <div class="ui simple dropdown item">
     <i class="user icon"></i>User<i class="dropdown icon"></i>
     <div class="menu">
-      <a class="item" href="detail"><i class="user circle icon"></i>User Details</a>
       <a class="item"><i class="chart bar icon"></i>Statistics</a>
       <a class="item" href="statement"><i class="file alternate icon"></i>Statement</a>
+      <a class="item" href="detail"><i class="user circle icon"></i>User Details</a>
+      <a class="item" href="category"><i class="tag icon"></i>Add Category</a>
     </div>
   </div>
   <a class="item" (click)="signOut()"><i class="power off icon"></i>Logout</a>
