--- a/gasto/src/app/record/record.component.html
+++ b/gasto/src/app/record/record.component.html
@@ -5,12 +5,12 @@
         <div class="header">Record</div>
       </div>
       <div class="content">
-        <h4 class="ui sub header">Amount</h4>
+        <h4 class="ui header">Amount</h4>
         <div class="ui labeled input">
           <label for="amount" class="ui label"><i class="money bill alternate outline icon"></i></label>
           <input type="text" [(ngModel)]="amount" name="amount" spellcheck="false" data-ms-editor="true" maxlength="10">
         </div>
-        <h4 class="ui sub header">Comment</h4>
+        <h4 class="ui header">Comment</h4>
         <div class="ui labeled input">
           <label for="comment" class="ui label"><i class="edit icon"></i></label>
           <input type="text" [(ngModel)]="comment" name="comment" spellcheck="false" data-ms-editor="true" maxlength="50">
