--- a/gasto/src/app/navigation/navigation.component.html
+++ b/gasto/src/app/navigation/navigation.component.html
@@ -1,6 +1,6 @@
 <div class="ui one column grid container center aligned">
   <div class="column">
-    <p id="logo">&#8377;{{title}}&#8377;</p>
+    <p id="logo">{{title}}</p>
   </div>
 </div>
 <div class="ui fluid three item menu">
