--- a/gasto/src/app/record/record.component.html
+++ b/gasto/src/app/record/record.component.html
@@ -10,10 +10,12 @@
           <label for="amount" class="ui label"><i class="money bill alternate outline icon"></i></label>
           <input type="text" [(ngModel)]="amount" name="amount" spellcheck="false" data-ms-editor="true" maxlength="10">
         </div>
-        <h4 class="ui header">Comment</h4>
+        <h4 class="ui header">Category</h4>
         <div class="ui labeled input">
-          <label for="comment" class="ui label"><i class="edit icon"></i></label>
-          <input type="text" [(ngModel)]="comment" name="comment" spellcheck="false" data-ms-editor="true" maxlength="50">
+          <label for="category" class="ui label"><i class="edit icon"></i></label>
+          <select [(ngModel)]="category" name="category" class="ui search dropdown">
+            <option *ngFor="let category of categoryList" value="{{ category }}">{{ category }}</option>
+          </select>
         </div>
       </div>
       <div class="extra content">
