--- a/gasto/src/app/record/record.component.html
+++ b/gasto/src/app/record/record.component.html
@@ -20,8 +20,8 @@
         </div>
       </div>
       <div class="extra content">
-        <button (click)="submit()" [disabled]="isSubmitDisable" class="ui primary button">Submit</button>
-        <button type="reset" class="ui button">Clear</button>
+        <button (click)="submit()" [disabled]="isDisable" class="ui primary button">Submit</button>
+        <button type="reset" [disabled]="isDisable" class="ui button">Clear</button>
       </div>
     </div>
   </form>
