--- a/gasto/src/app/app.component.html
+++ b/gasto/src/app/app.component.html
@@ -4,3 +4,4 @@
 <app-detail *ngIf="isDetailActive"></app-detail>
 <app-statement *ngIf="isStatementActive"></app-statement>
 <app-category *ngIf="isCategoryActive"></app-category>
+<app-statistics *ngIf="isStatisticsActive"></app-statistics>
