--- a/gasto/src/app/category/category.component.html
+++ b/gasto/src/app/category/category.component.html
@@ -10,7 +10,7 @@
           <label for="name" class="ui label"><i class="book icon"></i></label>
           <input class="width-194 uppercase" type="text" [(ngModel)]="name" name="name" spellcheck="false" data-ms-editor="true" maxlength="30">
         </div>
-        <p class="button-padding">
+        <p class="button-padding button-padding-4-percent">
             <button (click)="submit()" [disabled]="isDisabled" class="ui primary button">Submit</button>
             <button type="reset" [disabled]="isDisabled" class="ui button">Clear</button>
           </p>
