--- a/gasto/src/app/home/home.component.html
+++ b/gasto/src/app/home/home.component.html
@@ -1,6 +1,6 @@
 <div class="ui one column grid container center aligned">
   <div class="column">
-    <p id="logo">{{title}}</p>
+    <p id="logo"><i class="fire icon"></i>{{title}}</p>
   </div>
   <div class="column">
     <button class="ui secondary button" (click)="loginOrSignUp()">Login / SignUp</button>
