--- a/gasto/src/app/navigation/navigation.component.html
+++ b/gasto/src/app/navigation/navigation.component.html
@@ -10,6 +10,7 @@
     <div class="menu">
       <a class="item" href="statistics"><i class="chart bar icon"></i>Statistics</a>
       <a class="item" href="statement"><i class="file alternate icon"></i>Statement</a>
+      <a class="item" href="report"><i class="print icon"></i>Report</a>
       <a class="item" href="detail"><i class="user circle icon"></i>User Details</a>
       <a class="item" href="category"><i class="tag icon"></i>Add Category</a>
     </div>
