--- a/gasto/src/app/app.component.html
+++ b/gasto/src/app/app.component.html
@@ -5,3 +5,4 @@
 <app-statement *ngIf="isStatementActive"></app-statement>
 <app-category *ngIf="isCategoryActive"></app-category>
 <app-statistics *ngIf="isStatisticsActive"></app-statistics>
+<app-report *ngIf="isReportActive"></app-report>
