--- a/gasto/src/app/home/home.component.html
+++ b/gasto/src/app/home/home.component.html
@@ -2,8 +2,13 @@
   <div class="column">
     <p id="logo"><i class="fire icon"></i>{{title}}</p>
   </div>
+  <div class="mini ui buttons right floated">
+    <button class="ui button">Language / भाषा:</button>
+    <button class="ui button" [ngClass]="{'blue': enFlag}" (click)="en()">en</button>
+    <button class="ui button" [ngClass]="{'blue': hiFlag}" (click)="hi()">hi</button>
+  </div>
   <div class="column">
-    <button class="ui secondary button" (click)="loginOrSignUp()">Login / SignUp</button>
+    <button class="ui secondary button" (click)="loginOrSignUp()">{{ i18n.getText("1") }}</button>
   </div>
   <div class="column">
     <img src="assets/img/login.png" class="ui fluid big centered image" />
