notification language fix

--- a/gasto/src/app/home/home.component.html
+++ b/gasto/src/app/home/home.component.html
@@ -4,8 +4,8 @@
   </div>
   <div class="mini ui buttons right floated">
     <button class="ui button">Language / भाषा:</button>
-    <button class="ui button" [ngClass]="{'blue': enFlag}" (click)="en()">en</button>
-    <button class="ui button" [ngClass]="{'blue': hiFlag}" (click)="hi()">hi</button>
+    <button class="ui button" [ngClass]="{'blue': enFlag}" (click)="en()">English</button>
+    <button class="ui button" [ngClass]="{'blue': hiFlag}" (click)="hi()">हिन्दी</button>
   </div>
   <div class="column">
     <button class="ui secondary button" (click)="loginOrSignUp()">{{ i18n.getText("1") }}</button>
